branch not needed there

--- a/mac/iterm2/com.googlecode.iterm2.plist
+++ b/mac/iterm2/com.googlecode.iterm2.plist
@@ -646,7 +646,7 @@
 			<key>Badge Right Margin</key>
 			<real>10</real>
 			<key>Badge Text</key>
-			<string>\(user. git_branch)</string>
+			<string></string>
 			<key>Badge Top Margin</key>
 			<real>10</real>
 			<key>Blinking Cursor</key>
