--- a/editors/visual_code/settings.json
+++ b/editors/visual_code/settings.json
@@ -18,5 +18,6 @@
   "github-actions.org-features": true,
   "notebook.kernelProviderAssociations": [],
   "debug.javascript.usePreview": true,
-  "extensions.ignoreRecommendations": false
+  "extensions.ignoreRecommendations": false,
+  "explorer.confirmDelete": false
 }
