--- a/so/mac/iterm2/com.googlecode.iterm2.plist
+++ b/so/mac/iterm2/com.googlecode.iterm2.plist
@@ -1234,6 +1234,8 @@
 	</array>
 	<key>VisualIndicatorForEsc</key>
 	<false/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>kTurnOffSlowTriggersOfferUserDefaultsKey</key>
 	<false/>
 </dict>
