update visual code config

--- a/editors/visual_code/settings.json
+++ b/editors/visual_code/settings.json
@@ -22,5 +22,7 @@
   "explorer.confirmDelete": false,
   "editor.foldingMaximumRegions": 20000,
   "editor.stickyScroll.enabled": true,
-  "editor.guides.bracketPairs": "active"
+  "editor.guides.bracketPairs": "active",
+  "editor.bracketPairColorization.enabled": true,
+  "editor.bracketPairColorization.independentColorPoolPerBracketType": true
 }
