--- a/so/mac/brew/Brewfile
+++ b/so/mac/brew/Brewfile
@@ -4,7 +4,9 @@ tap "homebrew/core"
 brew "git"
 brew "mas"
 brew "nvm"
+brew "pnpm"
 cask "dropbox"
+cask "kindle"
 cask "rectangle"
 cask "spotify"
 cask "visual-studio-code"
