--- a/so/mac/brew/Brewfile
+++ b/so/mac/brew/Brewfile
@@ -1,13 +1,16 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+brew "awscli"
 brew "git"
 brew "mas"
 brew "nvm"
 brew "pnpm"
+brew "terraform"
 cask "dropbox"
 cask "kindle"
 cask "rectangle"
+cask "slack"
 cask "spotify"
 cask "visual-studio-code"
 mas "GarageBand", id: 682658836
