added go and act (for running github actions) to brewfile

--- a/so/mac/brew/Brewfile
+++ b/so/mac/brew/Brewfile
@@ -1,8 +1,10 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+brew "act"
 brew "awscli"
 brew "git"
+brew "go"
 brew "mas"
 brew "nvm"
 brew "pnpm"
