--- a/editors/visual_code/settings.json
+++ b/editors/visual_code/settings.json
@@ -24,5 +24,8 @@
   "editor.stickyScroll.enabled": true,
   "editor.guides.bracketPairs": "active",
   "editor.bracketPairColorization.enabled": true,
-  "editor.bracketPairColorization.independentColorPoolPerBracketType": true
+  "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  }
 }
