--- a/so/mac/brew/Brewfile
+++ b/so/mac/brew/Brewfile
@@ -2,15 +2,20 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "act"
+brew "python@3.11"
 brew "awscli"
 brew "git"
 brew "go"
+brew "jq"
 brew "mas"
 brew "nvm"
 brew "pnpm"
+brew "postgresql@14"
+brew "python@3.10"
 brew "terraform"
 cask "dropbox"
 cask "kindle"
+cask "postman"
 cask "rectangle"
 cask "slack"
 cask "spotify"
