--- a/so/mac/brew/Brewfile
+++ b/so/mac/brew/Brewfile
@@ -1,6 +1,7 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "yasyf/do"
 brew "act"
 brew "python@3.11"
 brew "awscli"
@@ -11,15 +12,20 @@ brew "mas"
 brew "nvm"
 brew "pnpm"
 brew "postgresql@14"
-brew "python@3.10"
+brew "python@3.10", link: false
 brew "terraform"
+brew "yasyf/do/do"
+cask "bitwarden"
 cask "dropbox"
 cask "kindle"
+cask "linear-linear"
 cask "postman"
 cask "rectangle"
+cask "skype"
 cask "slack"
 cask "spotify"
 cask "visual-studio-code"
+cask "zoom"
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
