new brew dependencies

--- a/so/mac/brew/Brewfile
+++ b/so/mac/brew/Brewfile
@@ -1,29 +1,53 @@
 tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/core"
+tap "oven-sh/bun"
 tap "yasyf/do"
 brew "act"
+brew "libtiff"
+brew "little-cms2"
+brew "webp"
+brew "jpeg-xl"
+brew "aom"
+brew "pycparser"
+brew "cffi"
+brew "docutils"
 brew "python@3.11"
 brew "awscli"
+brew "cairo"
+brew "libavif"
+brew "gd"
 brew "git"
 brew "go"
+brew "netpbm"
+brew "gts"
+brew "harfbuzz"
+brew "librsvg"
+brew "graphviz"
 brew "jq"
+brew "libpq", link: true
 brew "mas"
 brew "nvm"
 brew "pnpm"
-brew "postgresql@14"
-brew "python@3.10", link: false
+brew "postgresql@16"
+brew "python@3.10"
+brew "redis"
 brew "terraform"
+brew "terragrunt"
+brew "oven-sh/bun/bun"
 brew "yasyf/do/do"
 cask "bitwarden"
+cask "cursor"
 cask "dropbox"
+cask "keepassx"
 cask "kindle"
 cask "linear-linear"
+cask "notion"
+cask "postico"
 cask "postman"
 cask "rectangle"
 cask "skype"
 cask "slack"
 cask "spotify"
+cask "telegram"
 cask "visual-studio-code"
 cask "zoom"
 mas "GarageBand", id: 682658836
@@ -31,3 +55,17 @@ mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
+vscode "blackboxapp.blackbox"
+vscode "cardinal90.multi-cursor-case-preserve"
+vscode "dbaeumer.vscode-eslint"
+vscode "eamodio.gitlens"
+vscode "esbenp.prettier-vscode"
+vscode "github.vscode-github-actions"
+vscode "hashicorp.terraform"
+vscode "mikestead.dotenv"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "ms-vsliveshare.vsliveshare-pack"
+vscode "mtxr.sqltools"
+vscode "pflannery.vscode-versionlens"
+vscode "streetsidesoftware.code-spell-checker"
